src/index.css
@font-face {
	font-family: 'Emnizen';
	src: local('Emizen'), url('../fonts/Emizen.ttf') format('truetype');
}

:root {
	font-family: Emnizen, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
	line-height: 1.5;
	font-weight: 400;
	font-size: 16px;
	color-scheme: light dark;
	color: rgba(255, 255, 255, 0.87);
	background-color: #3b3561;

	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-text-size-adjust: 100%;
}

.firstSection {
	background-color: #934b4b;
}
.secondSection {
	background-color: #3b3561;
}
.thirdSection {
	background-color: #2b5757;
}
.fourthSection {
	background-color: #443f18;
}

.title-glow {
	color: #fff;
	text-shadow: 0 0 4px #fff, 0 0 8px #fff, 0 0 16px #fff, 0 0 32px #fff;

	animation: pulsate 2.5s infinite alternate;
}
@keyframes pulsate {
	100% {
		/* Larger blur radius */
		text-shadow: 0 0 8px #fff, 0 0 16px #fff, 0 0 32px #fff, 0 0 64px #fff;
	}
	0% {
		/* Smaller blur radius */
		text-shadow: 0 0 4px #fff, 0 0 8px #fff, 0 0 16px #fff, 0 0 32px #fff;
	}
}

a {
	font-weight: 500;
	color: #fff;
	text-decoration: inherit;
	transition: 0.25s;
}

* {
	margin: 0;
	padding: 0;
}

html {
	margin: 0;
	padding: 0;
	scroll-behavior: smooth;
}

body {
	margin: 0;
	min-width: 320px;
	min-height: 100vh;
}

h1 {
	font-size: 3.2em;
	line-height: 1.1;
}

header::before {
	content: '';
}

header::after {
	content: '';
}

button {
	border-radius: 50px;
	color: #fff;
	border: 1px solid #fff;
	padding: 1rem 0;
	padding-inline: 2rem;
	font-size: 1.5rem;
	font-weight: 500;
	font-family: inherit;
	background-color: transparent;
	cursor: pointer;
	transition: 0.25s;
}
button:hover {
	color: #000;
	background-color: #fff;
}
/* Accesibility for buttons */
/* button:focus,
button:focus-visible {
	outline: 4px auto -webkit-focus-ring-color;
} */

@media (prefers-color-scheme: light) {
	:root {
		color-scheme: light;
		color: rgba(255, 255, 255, 0.87);
		background-color: #5402be;
		transition: 0.5s;
	}
	.dark-mode {
		transition: 0.5s;
		color: rgba(255, 255, 255, 0.87);
		background-color: #3b3561;
	}
	a:hover {
		color: #fff;
	}
	button:hover {
		background-color: #fff;
	}
	button {
		background-color: transparent;
		border: 1px solid #fff;
	}
	.title-glow {
		color: #fff;
		text-shadow: none;
		animation: none;
	}
	.firstSection {
		background-color: #dd7373;
	}
	.secondSection {
		background-color: #3b3561;
	}
	.thirdSection {
		background-color: #51a3a3;
	}
	.fourthSection {
		background-color: #ead94c;
	}
}

@media screen and (prefers-reduced-motion) {
	.title-glow {
		color: #fff;
		text-shadow: none;
		animation: none;
	}
}

